Add loading screen to index.html
Added a loading screen to index.html

--- a/index.html
+++ b/index.html
@@ -124,4 +124,9 @@
 
     <script src="script.js"></script>
 </body>
+
+    <div class="loading-screen" id="loadingScreen">
+    <h1>너의 시선 속에서</h1>
+    <p>Loading our story...</p>
+</div>
 </html>
