--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- pages deploy trigger -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -130,3 +131,4 @@
     <p>Loading our story...</p>
 </div>
 </html>
+
