Restore index.html for deployment

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="final-scene hidden" id="finalScene">
     <div class="final-content">
         <h2 class="final-title">Final Episode: Will You Be My Valentine?</h2>
-        <p class="final-quote">"cues big girls don't cry by fergie"</p>
+        <p class="final-quote">cues big girls don't cry by fergie</p>
         
         <div class="letter">
             <p>I know we had our short fuse earlier, and like any good K-drama, we're in that part where things got complicated. But every drama worth watching has the couple work through it.</p>
@@ -131,4 +131,5 @@
     <p>Loading our story...</p>
 </div>
 </html>
+
 
